[tool.poetry]
name = "deps-finder"
version = "0.1.0"
description = ""
authors = ["s"]
readme = "README.md"
packages = [{include = "deps_finder"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.4.2"
typer = "^0.8.0"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
